fix worwrap for errors

--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -663,6 +663,12 @@ input#editorTitle {
   color: darkorange;
 }
 
+.title-error,
+.title-warning {
+  word-break: break-all;
+  white-space: normal;
+}
+
 .menu:hover .title {
   width: 100%;
 }
